<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/filters"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/tvFilters"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_min="24dp" />


    <LinearLayout
        android:id="@+id/linearAuthors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFilters">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="20dp"
            android:text="@string/authors"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edSearchAuthor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_rounded"
            android:drawableEnd="@drawable/ic_more"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/author_prompt"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:paddingEnd="15dp"
            android:paddingBottom="8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="20dp"
        android:text="@string/sort"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearAuthors" />

    <LinearLayout
        android:id="@+id/linearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAuthors">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSortByDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/roboto_regular"
            android:minHeight="0dp"
            android:padding="7dp"
            android:text="@string/sort_by_date"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSortByBestMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/roboto_regular"
            android:minHeight="0dp"
            android:padding="7dp"
            android:text="@string/sort_by_best_match"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_search"
        android:backgroundTint="@color/dark_gray"
        android:fontFamily="@font/roboto_regular"
        android:minHeight="0dp"
        android:padding="10dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearButton"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
