<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="7dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="0dp"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toStartOf="@id/btnFilter"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.75" />


    <ImageView

        android:id="@+id/btnFilter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_search"
        android:padding="7dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toEndOf="@id/searchBar"
        app:layout_constraintTop_toTopOf="@id/searchBar"
        app:layout_constraintWidth_percent="0.10" />

    <TextView
        android:id="@+id/textContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/search_prompt"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_search"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto_regular"
        android:minHeight="0dp"
        android:padding="10dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textContainer"
        app:layout_constraintWidth_percent="0.4" />


    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/linearFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@id/searchBar"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearFilters"
        tools:listitem="@layout/card_book_item" />


</androidx.constraintlayout.widget.ConstraintLayout>
